end of Chapter 6

--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html>
 
     <head>
@@ -11,6 +14,7 @@
         <br />
         <a href="/rango/about/">About</a>
         <br />
+        <img src="{% static "images/test1.jpg" %}" alt="Picture of Matlab" />
     </body>
 
 </html>
